aligned chores, css mobile correct size

--- a/our-house/styles/ShoppingListItem.module.css
+++ b/our-house/styles/ShoppingListItem.module.css
@@ -283,8 +283,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 2.1em;
-    height: 2.1em;
+    width: 1.4em;
+    height: 1.4em;
     margin-right: 0.6vw;
     border: 3px solid black;
     border-radius: 50%;
@@ -292,8 +292,8 @@
   }
   
   .background img {
-    width: 2.15em;
-    height: 2.15em;
+    width: 1.4em;
+    height: 1.4em;
   }
   
   .edit, .delete {
@@ -305,12 +305,12 @@
   }
   
   .edit {
-    margin-right: 0.4vw;
+    margin-right: 0.2vw;
   }
   
   
   .edit svg, .delete svg {
-    width: 1.3em;
+    width: 0.95em;
     height: auto;
     cursor: pointer;
   }
